# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  server.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
